# sandbox

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/: data_extensions.md  diagnostics_extensions.md  ecs_extensions.md  io_extensions.md  system_extensions.md
launcher/: CMakeLists.txt
launcher/include/launcher/: pch.h
launcher/source/: main.cpp
sandbox/: CMakeLists.txt  LICENSE.txt  README.md
sandbox/include/sandbox/: pch.h  sandbox.h
sandbox/include/sandbox/core/: engine.cpp  engine.h  engine.inl  extension.h  logger.h  logger.inl  properties.cpp  properties.h  properties.inl  registration.h  registry.h  registry.inl  sandbox_fwd.h  scoped_logger.h  scoped_logger.inl  type_registration.h  type_registry.h  type_registry.inl
sandbox/include/sandbox/data/: caches.h  caches_evt.h  registration.h  registry.inl  storage.inl  storage_evt.h  storage_ext.h  storage_ext.inl
sandbox/include/sandbox/diagnostics/: diagnostics.h  diagnostics_evt.h  diagnostics_ext.h  logger.h  logger.inl  logger_evt.h  logger_ext.h  scoped_logger.h  scoped_logger.inl
sandbox/include/sandbox/ecs/: events.inl  events_evt.h  events_ext.h  events_ext.inl  scopes_evt.h  stages_evt.h  systems.h  systems.inl  systems_evt.h  systems_ext.h  systems_ext.inl  triggers.inl  triggers_evt.h  triggers_ext.h  triggers_ext.inl
sandbox/include/sandbox/extensions/: caches.cpp  caches.inl  clock.cpp  clock.h  dependencies.cpp  dependencies.h  diagnostics.cpp  events.cpp  events.h  events.inl  filesystems.cpp  filesystems.h  logger.cpp  logger.h  logger.inl  scopes.cpp  scopes.h  serializer.cpp  stages.cpp  stages.h  storage.cpp  storage.h  storage.inl  systems.cpp  systems.h  systems.inl  triggers.cpp  triggers.h  triggers.inl
sandbox/include/sandbox/filesystem/: properties.h
sandbox/include/sandbox/io/: filesystem_evt.h  filesystem_ext.h  serializer.h  serializer_evt.h  serializer_ext.h  serializer_ext.inl
sandbox/include/sandbox/reflections/: registration.h  registry.h
sandbox/include/sandbox/system/: clock_evt.h  clock_ext.h  dependencies_evt.h  dependencies_ext.h
sandbox/include/sandbox/utilities/: properties.h  properties.inl
sandbox/source/core/: engine.cpp  extension.cpp  logger.cpp  properties.cpp  registry.cpp  scoped_logger.cpp  type_registry.cpp
sandbox/source/data/: caches.cpp  caches_ext.cpp  registry.cpp  storage.cpp  storage_ext.cpp
sandbox/source/diagnostics/: diagnostics.cpp  diagnostics_ext.cpp  ext_logger.h  logger.cpp  scoped_logger.cpp
sandbox/source/ecs/: events.cpp  events_ext.cpp  scopes.cpp  scopes_ext.cpp  stages.cpp  stages_ext.cpp  systems.cpp  systems_ext.cpp  triggers.cpp  triggers_ext.cpp
sandbox/source/extensions/: caches.cpp  events.cpp  logger.cpp  scopes.cpp  stages.cpp  storage.cpp  systems.cpp  triggers.cpp
sandbox/source/filesystem/: properties.cpp
sandbox/source/io/: filesystem.cpp  filesystem_ext.cpp  serializer.cpp  serializer_ext.cpp
sandbox/source/reflections/: registry.cpp
sandbox/source/system/: clock.cpp  clock_ext.cpp  dependencies.cpp  dependencies_ext.cpp
sandbox/source/utilities/: logger.cpp  properties.cpp
